# Fraud_Detection_Using_Metaheuristics_Algorithms-

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: main.yml
Data_Phase/: main.py
Data_Phase/balancing/: balancer.py  balancing_init_.py
Data_Phase/config/: config.py
Data_Phase/data/: data_init_.py  data_loader.py  preprocessor.py
Data_Phase/visualization/: visualization_init_.py  visualizer.py
Model_Phase/: Main_Model_Phase.py  Optimization Pipeline - Easy Guide.md  classifiers.py  config.py  data_loader.py  metaheuristics_algorithms.py  metaheuristics_base.py  metrics.py  optimization_pipeline.py  results_saver.py  visualizations.py
app_data/: data_info.json  raw_mappings.json  raw_stats.json
src/fraud_detection/: config.py  main.py
src/fraud_detection/data/: balancing.py  loader.py  preprocessing.py
src/fraud_detection/models/: classifiers.py  metrics.py
src/fraud_detection/optimization/: algorithms.py  base.py  pipeline.py
src/fraud_detection/visualization/: plots.py
tests/: test_import.py
