[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud_detection"
version = "0.1.0"
description = "Advanced Fraud Detection System using Metaheuristic Optimization"
readme = "README.md"
authors = [
    { name = "Mohamed Radwan", email = "mohamed5523@example.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["fraud detection", "machine learning", "metaheuristics", "optimization"]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "imbalanced-learn>=0.12.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "tqdm>=4.66.0",
    "joblib>=1.3.0",
    "xgboost>=2.0.0",
    "openpyxl>=3.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0"
]

[project.urls]
"Homepage" = "https://github.com/mohamed5523/Fraud_Detection"
"Bug Tracker" = "https://github.com/mohamed5523/Fraud_Detection/issues"

[tool.setuptools.packages.find]
where = ["src"]
